--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Burger Center</title>
     <!-- CSS only -->
+<link rel="stylesheet" type="text/css" href="/assets/burger_style.css" />
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-{{!-- <link rel="stylesheet" type="text/css" href="/public/assets/css/burger_style.css" /> --}}
-</head>
+<script src="https://code.jquery.com/jquery.js"></script>
 <body>
 <nav class="navbar navbar-light bg-light">
   <span class="navbar-brand mb-0 h1">Navbar</span>
@@ -21,8 +21,8 @@
       <h5 class="card-header text-center">Make and Devour Your Favorite Burgers!</h5>
       <div class="card-body">
         <div class="form-group">
-          <label for="make_burger"></label>
-          <textarea class="form-control" rows="4" id="make_burger" name="burger_name"></textarea>
+          <label for="new_burger"></label>
+          <textarea class="form-control" rows="4" id="new_burger" name="burger_name"></textarea>
           <button id="submit-button" type="submit" class="btn btn-danger mx-auto mt-4">Make a Burger</button>
         </div>
       </div>
@@ -32,10 +32,11 @@
 </div>
 
  <!-- JS, Popper.js, and jQuery -->
- <script rel="stylesheet" type="text/javascript" src="/public/assets/app.js"></script>  
- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+ {{!-- <script
+  src="https://code.jquery.com/jquery-3.5.1.js"
+  integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+  crossorigin="anonymous"></script> --}}
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script> 
+<script rel="stylesheet" type="text/javascript" src="/assets/script.js"></script>
 </body>
 </html>
