--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Burger Center</title>
     <!-- CSS only -->
-<link rel="stylesheet" type="text/css" href="/assets/burger_style.css" />
+<link rel="stylesheet" type="text/css" href="/assets/css/burger_style.css" />
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 <script src="https://code.jquery.com/jquery.js"></script>
 <body>
-<nav class="navbar navbar-light bg-light">
-  <span class="navbar-brand mb-0 h1">Navbar</span>
+<nav class="navbar navbar-light bg-warning">
+  <span class="navbar-brand mb-0 h1">Burger Center</span>
 </nav>
 
 <div class="container">
